Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -76,61 +76,8 @@ Create a template with both states and wrap them into tags with "ng-hide" and "n
 &lt;/span&gt;
 </code></pre>
 
-
-    .spinner {
-      width: 100%;
-      text-align: center;
-    }
-    .spinner.gray &gt; div {
-      background-color: #808080;
-    }
-    .spinner &gt; div {
-      width: 12px;
-      height: 12px;
-      background-color: white;
-      border-radius: 100%;
-      display: inline-block;
-      -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
-      animation: sk-bouncedelay 1.4s infinite ease-in-out both;
-    }
-    .spinner .bounce1 {
-      -webkit-animation-delay: -0.32s;
-      animation-delay: -0.32s;
-    }
-    .spinner .bounce2 {
-      -webkit-animation-delay: -0.16s;
-      animation-delay: -0.16s;
-    }
-    @-webkit-keyframes sk-bouncedelay {
-      0%, 80%, 100% {
-        -webkit-transform: scale(0);
-      }
-      40% {
-        -webkit-transform: scale(1);
-      }
-    }
-    <a href="https://github.com/keyframes" class="user-mention">@keyframes</a> sk-bouncedelay {
-      0%, 80%, 100% {
-        -webkit-transform: scale(0);
-        transform: scale(0);
-      }
-      40% {
-        -webkit-transform: scale(1);
-        transform: scale(1);
-      }
-    }
-
-
-<div>
-    <div></div>
-    <div></div>
-    <div></div>
-</div>
-
-<p>
-</p>
-
-<pre><code></code></pre>
+<h1>
+<a id="-rafa" class="anchor" href="#-rafa" aria-hidden="true"><span class="octicon octicon-link"></span></a> rafa</h1>
         </section>
 
         <aside id="sidebar">
