--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <header>
       <div class="inner">
-        <h1>Button-loader</h1>
+        <h1>Button-loader RFA</h1>
         <h2>Button loader directive for angular</h2>
         <a href="https://github.com/rafasoyyo/Button-Loader" class="button"><small>View project on</small> GitHub</a>
       </div>
