--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
   <head>
@@ -8,6 +9,8 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
+    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"></script>
 
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -75,6 +78,13 @@ Create a template with both states and wrap them into tags with "ng-hide" and "n
     &lt;i&gt;My custom icon for waiting state&lt;/i&gt;
 &lt;/span&gt;
 </code></pre>
+
+
+<h3>
+<a id="examples-templates" class="anchor" href="#examples-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>examples Templates</h3>
+
+  <button class="btn btn-primary">Example</button>
+
         </section>
 
         <aside id="sidebar">
