--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
   <head>
@@ -9,9 +8,6 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
-    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"></script>
-    <script src="/dist/btn-loader-directive-min.js"></script>
 
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -20,7 +16,7 @@
     <title>Button-loader by rafasoyyo</title>
   </head>
 
-  <body style="padding-bottom:60px;">
+  <body>
     <header>
       <div class="inner">
         <h1>Button-loader</h1>
@@ -36,6 +32,8 @@
 <a id="button-loader-directive-for-angular" class="anchor" href="#button-loader-directive-for-angular" aria-hidden="true"><span class="octicon octicon-link"></span></a>Button loader directive for angular</h1>
 
 <p>That is just another directive to manage button loaders, useful for wait times like ajax calls and so. Why create another directive fo this??? because I have not find anyone as simple as I need or as customizable as I want, so I decided to create my own.</p>
+
+<p><a href="http://rafasoyyo.github.io/Button-Loader/"> See it in action </a></p>
 
 <h3>
 <a id="how-to-use-it" class="anchor" href="#how-to-use-it" aria-hidden="true"><span class="octicon octicon-link"></span></a>How to use it</h3>
@@ -62,6 +60,7 @@ ng-disabled="custom_condition"      // Add disable state
 btn-include="'noTemplate.html'"     // Add custom template
 btn-texts="{load:'Load', loading: 'loading...'}"                    // Fast customization for texts
 btn-icons="{load:'fa fa-save', loading: 'fa fa-spinner fa-pulse'}"  // Fast customization for icons 
+btn-color="'255,255,255'"           // Customize default spinner color ( '' are mandatory )
 </code></pre>
 
 <h3>
@@ -79,99 +78,6 @@ Create a template with both states and wrap them into tags with "ng-hide" and "n
     &lt;i&gt;My custom icon for waiting state&lt;/i&gt;
 &lt;/span&gt;
 </code></pre>
-
-
-<h3>
-<a id="Examples-templates" class="anchor" href="#examples-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Examples Templates</h3>
-
-  <div ng-app="example_app">
-    <div ng-controller="example_Ctrl">
-      <span>Default button: </span>
-      <button btn-loader btn-condition="cond0"></button>
-      <button ng-click="cond0 = false">Stop spinner</button>
-      <div style="margin:5px"></div>
-      <pre><code>code:
-        &lt;button btn-loader btn-condition="cond0"&gt&lt;/button&gt; 
-        &lt;button ng-click="cond0 = false"&gtStop spinner&lt;/button&gt; </code></pre>
-
-      <div style="margin:15px"></div>
-
-      <span>Bootstrap style button: </span>
-      <button class="btn btn-primary" btn-loader btn-condition="cond1" btn-color="'255,255,255'"></button>
-      <button class="btn btn-default" ng-click="cond1 = false">Stop spinner</button>
-      <div style="margin:5px"></div>
-      <pre><code>code:
-        &lt;button class="btn btn-primary" btn-loader btn-condition="cond1" btn-color="'255,255,255'"&gt&lt;/button&gt; 
-        &lt;button class="btn btn-primary" ng-click="cond1 = false"&gtStop spinner&lt;/button&gt; </code></pre>
-
-      <div style="margin:15px"></div>
-
-      <span>Custom template: </span>
-      <button class="btn btn-primary" btn-loader btn-condition="cond2" btn-include="'example/custom_template.html'"></button>
-      <button class="btn btn-default" ng-click="cond2 = false">Stop spinner</button>
-      <div style="margin:5px"></div>
-      <pre><code>code:
-        &lt;button class="btn btn-primary" btn-loader btn-condition="cond2" btn-include="'example/custom_template.html'"&gt&lt;/button&gt; 
-        &lt;button class="btn btn-primary" ng-click="cond2 = false"&gtStop spinner&lt;/button&gt; 
-
-        Template:
-          &lt;style&gt; 
-            .spinner {
-              width: 100%;
-              text-align: center;
-            }
-            .spinner.gray > div {
-              background-color: #808080;
-            }
-            .spinner > div {
-              width: 12px;
-              height: 12px;
-              background-color: white;
-              border-radius: 100%;
-              display: inline-block;
-              -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
-              animation: sk-bouncedelay 1.4s infinite ease-in-out both;
-            }
-            .spinner .bounce1 {
-              -webkit-animation-delay: -0.32s;
-              animation-delay: -0.32s;
-            }
-            .spinner .bounce2 {
-              -webkit-animation-delay: -0.16s;
-              animation-delay: -0.16s;
-            }
-            @-webkit-keyframes sk-bouncedelay {
-              0%, 80%, 100% {
-                -webkit-transform: scale(0);
-              }
-              40% {
-                -webkit-transform: scale(1);
-              }
-            }
-            @keyframes sk-bouncedelay {
-              0%, 80%, 100% {
-                -webkit-transform: scale(0);
-                transform: scale(0);
-              }
-              40% {
-                -webkit-transform: scale(1);
-                transform: scale(1);
-              }
-            }
-          &lt;/style&gt; 
-
-
-          &lt;div ng-show="active" class="spinner"&gt; 
-            &lt;div class="bounce1"&gt; &lt;/div&gt; 
-            &lt;div class="bounce2"&gt; &lt;/div&gt; 
-            &lt;div class="bounce3"&gt; &lt;/div&gt; 
-          &lt;/div>
-          &lt;span ng-hide="active" ng-bind="'SAVE'">&lt;/span&gt; 
-          &lt;input type="submit" style="display:none"/&gt; 
-        </code></pre>
-
-    </div>
-  </div>
         </section>
 
         <aside id="sidebar">
@@ -191,10 +97,6 @@ Create a template with both states and wrap them into tags with "ng-hide" and "n
       </div>
     </div>
 
-  <script>
-    var myapp = angular.module('example_app', ['btnLoader'])
-    myapp.controller('example_Ctrl',['$scope', function($scope){}]);
-  </script>
   
   </body>
 </html>
