--- a/index.html
+++ b/index.html
@@ -9,20 +9,65 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
+    <title>Button-loader by rafasoyyo</title>
+
 
     <!--<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">-->
+    <style>
+      .btn{
+        display: inline-block;
+        padding: 6px 12px;
+        margin-bottom: 0;
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 1.42857143;
+        text-align: center;
+        white-space: nowrap;
+        vertical-align: middle;
+        -ms-touch-action: manipulation;
+        touch-action: manipulation;
+        cursor: pointer;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+        background-image: none;
+        border: 1px solid transparent;
+        border-radius: 4px;
+      }
+
+
+      .btn-primary {
+        color: #fff;
+        background-color: #337ab7;
+        border-color: #2e6da4;
+      }
+      .btn-primary:hover {
+        color: #fff;
+        background-color: #286090;
+        border-color: #204d74;
+      }
+
+
+      .btn-default {
+        color: #333;
+        background-color: #fff;
+        border-color: #ccc;
+      }
+      .btn-default:hover {
+        color: #333;
+        background-color: #e6e6e6;
+        border-color: #adadad;
+      }
+    </style>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"></script>
-    <script>angular.module("btnLoader",[]).directive("btnLoader",["$timeout",function(n){return{restrict:"A",scope:{btnCondition:"=btnCondition",btnTexts:"=btnTexts",btnIcons:"=btnIcons",btnInclude:"=btnInclude",btnColor:"=btnColor"},template:function(n,t){return t.btnInclude?'<span ng-include="btnInclude"></span>':'<style> \n    .btn-load-span{\n        display:inline-block; vertical-align: middle}\n    .btn-load-icon{\n        display:inline-block; vertical-align: initial; margin: 0 3px 0 0}\n    .btn-loading-span{\n        display:inline-block; vertical-align:middle; position:relative;}\n    .btn-loading-icon {\n      height: 15px; width: 15px; position: relative; display:inline-block; vertical-align:middle;\n      -webkit-animation: rotation 1s infinite linear; -moz-animation: rotation 1s infinite linear;\n      -o-animation: rotation 1s infinite linear; animation: rotation 1s infinite linear;\n      border: 2px solid; border-radius: 100%; margin: 0 0 0 5px;}\n    .btn-loading-icon:before {\n      content: ""; display: block; position: absolute; left: 0px; top: -2px; height: 100%; width: 100%;\n      border-top: 2px solid; border-left: 2px solid transparent;\n      border-bottom: 2px solid transparent; border-right: 2px solid transparent; border-radius: 100%; } \n    @-webkit-keyframes rotation {\n      from { -webkit-transform: rotate(0deg);   }\n      to   { -webkit-transform: rotate(359deg); } }\n    @-moz-keyframes rotation {\n      from { -moz-transform: rotate(0deg);   }\n      to   { -moz-transform: rotate(359deg); } }\n    @-o-keyframes rotation {\n      from { -o-transform: rotate(0deg);   }\n      to   { -o-transform: rotate(359deg); } }\n    @keyframes rotation {\n      from { transform: rotate(0deg);   }\n      to   { transform: rotate(359deg); } }\n</style>\n\n<span class="btn-load-span" ng-hide="active">\n    <i ng-if="btnIcons.load" class="btn-load-icon {{btnIcons.load}}"></i>\n    {{ btnTexts.load || "Save" }}\n</span>\n<span class="btn-loading-span" ng-show="active">\n    {{ btnTexts.loading || "Saving" }}\n    <i class="{{btnIcons.loading || \'btn-loading-icon\' }}" style="border-color:rgba({{btnColor || \'0,0,0\'}} , .3)"></i>\n</span>\n<input type="submit" style="display:none">'},link:function(t,i,o){return t.btnCondition=!1,i.bind("click",function(){var e;return o.btnKeepsize&&(e=i[0],i.css({width:e.offsetWidth+"px",height:e.offsetHeight+"px"})),n(function(){return t.btnCondition=!0},1)}),t.$watch("btnCondition",function(n,e){return!n&&o.btnKeepsize&&i.css({background:"",width:"",height:""}),t.active=n?!0:!1})}}}]);</script> 
+    <script>angular.module("btnLoader",[]).directive("btnLoader",["$timeout",function(n){return{restrict:"A",scope:{btnCondition:"=btnCondition",btnTexts:"=btnTexts",btnIcons:"=btnIcons",btnInclude:"=btnInclude",btnColor:"=btnColor"},template:function(n,t){return t.btnInclude?'<span ng-include="btnInclude"></span>':'<style> \n    .btn-load-span{\n        display:inline-block; vertical-align: middle}\n    .btn-load-icon{\n        display:inline-block; vertical-align: initial; margin: 0 3px 0 0}\n    .btn-loading-span{\n        display:inline-block; vertical-align:middle; position:relative;}\n    .btn-loading-icon {\n      height: 15px; width: 15px; position: relative; display:inline-block; vertical-align:middle;\n      -webkit-animation: rotation 1s infinite linear; -moz-animation: rotation 1s infinite linear;\n      -o-animation: rotation 1s infinite linear; animation: rotation 1s infinite linear;\n      border: 2px solid; border-radius: 100%; margin: 0 0 0 5px;}\n    .btn-loading-icon:before {\n      content: ""; display: block; position: absolute; left: 0px; top: -2px; height: 100%; width: 100%;\n      border-top: 2px solid; border-left: 2px solid transparent;\n      border-bottom: 2px solid transparent; border-right: 2px solid transparent; border-radius: 100%; } \n    @-webkit-keyframes rotation {\n      from { -webkit-transform: rotate(0deg);   }\n      to   { -webkit-transform: rotate(359deg); } }\n    @-moz-keyframes rotation {\n      from { -moz-transform: rotate(0deg);   }\n      to   { -moz-transform: rotate(359deg); } }\n    @-o-keyframes rotation {\n      from { -o-transform: rotate(0deg);   }\n      to   { -o-transform: rotate(359deg); } }\n    @keyframes rotation {\n      from { transform: rotate(0deg);   }\n      to   { transform: rotate(359deg); } }\n</style>\n\n<span class="btn-load-span" ng-hide="active">\n    <i ng-if="btnIcons.load" class="btn-load-icon {{btnIcons.load}}"></i>\n    {{ btnTexts.load || "Save" }}\n</span>\n<span class="btn-loading-span" ng-show="active">\n    {{ btnTexts.loading || "Saving" }}\n    <i class="{{btnIcons.loading || \'btn-loading-icon\' }}" style="border-color:rgba({{btnColor || \'0,0,0\'}} , .3)"></i>\n</span>\n<input type="submit" style="display:none">'},link:function(t,i,o){return t.btnCondition=!1,i.bind("click",function(){var e;return o.btnKeepsize&&(e=i[0],i.css({width:e.offsetWidth+"px",height:e.offsetHeight+"px"})),n(function(){return t.btnCondition=!0},1)}),t.$watch("btnCondition",function(n,e){return!n&&o.btnKeepsize&&i.css({background:"",width:"",height:""}),t.active=n?!0:!1})}}}]);</script>
 
-      <script>
-        var myapp = angular.module('example_app', ['btnLoader'])
-        myapp.controller('example_Ctrl',['$scope', function($scope){}]);
-      </script>
 
-    <title>Button-loader by rafasoyyo</title>
+
   </head>
 
-  <body>
+  <body style="padding-bottom:60px;">
     <header>
       <div class="inner">
         <h1>Button-loader</h1>
@@ -38,8 +83,6 @@
 <a id="button-loader-directive-for-angular" class="anchor" href="#button-loader-directive-for-angular" aria-hidden="true"><span class="octicon octicon-link"></span></a>Button loader directive for angular</h1>
 
 <p>That is just another directive to manage button loaders, useful for wait times like ajax calls and so. Why create another directive fo this??? because I have not find anyone as simple as I need or as customizable as I want, so I decided to create my own.</p>
-
-<p><a href="http://rafasoyyo.github.io/Button-Loader/"> See it in action </a></p>
 
 <h3>
 <a id="how-to-use-it" class="anchor" href="#how-to-use-it" aria-hidden="true"><span class="octicon octicon-link"></span></a>How to use it</h3>
@@ -66,7 +109,6 @@ ng-disabled="custom_condition"      // Add disable state
 btn-include="'noTemplate.html'"     // Add custom template
 btn-texts="{load:'Load', loading: 'loading...'}"                    // Fast customization for texts
 btn-icons="{load:'fa fa-save', loading: 'fa fa-spinner fa-pulse'}"  // Fast customization for icons 
-btn-color="'255,255,255'"           // Customize default spinner color ( '' are mandatory )
 </code></pre>
 
 <h3>
@@ -84,6 +126,99 @@ Create a template with both states and wrap them into tags with "ng-hide" and "n
     &lt;i&gt;My custom icon for waiting state&lt;/i&gt;
 &lt;/span&gt;
 </code></pre>
+
+
+<h3>
+<a id="Examples-templates" class="anchor" href="#examples-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Examples Templates</h3>
+
+  <div ng-app="example_app">
+    <div ng-controller="example_Ctrl">
+      <span>Default button: </span>
+      <button btn-loader btn-condition="cond0"></button>
+      <button ng-click="cond0 = false">Stop spinner</button>
+      <div style="margin:5px"></div>
+      <pre><code>code:
+        &lt;button btn-loader btn-condition="cond0"&gt&lt;/button&gt; 
+        &lt;button ng-click="cond0 = false"&gtStop spinner&lt;/button&gt; </code></pre>
+
+      <div style="margin:15px"></div>
+
+      <span>Bootstrap style button: </span>
+      <button class="btn btn-primary" btn-loader btn-condition="cond1" btn-color="'255,255,255'"></button>
+      <button class="btn btn-default" ng-click="cond1 = false">Stop spinner</button>
+      <div style="margin:5px"></div>
+      <pre><code>code:
+        &lt;button class="btn btn-primary" btn-loader btn-condition="cond1" btn-color="'255,255,255'"&gt&lt;/button&gt; 
+        &lt;button class="btn btn-primary" ng-click="cond1 = false"&gtStop spinner&lt;/button&gt; </code></pre>
+
+      <div style="margin:15px"></div>
+
+      <span>Custom template: </span>
+      <button class="btn btn-primary" btn-loader btn-condition="cond2" btn-include="'example/custom_template.html'"></button>
+      <button class="btn btn-default" ng-click="cond2 = false">Stop spinner</button>
+      <div style="margin:5px"></div>
+      <pre><code>code:
+        &lt;button class="btn btn-primary" btn-loader btn-condition="cond2" btn-include="'example/custom_template.html'"&gt&lt;/button&gt; 
+        &lt;button class="btn btn-primary" ng-click="cond2 = false"&gtStop spinner&lt;/button&gt; 
+
+        Template:
+          &lt;style&gt; 
+            .spinner {
+              width: 100%;
+              text-align: center;
+            }
+            .spinner.gray > div {
+              background-color: #808080;
+            }
+            .spinner > div {
+              width: 12px;
+              height: 12px;
+              background-color: white;
+              border-radius: 100%;
+              display: inline-block;
+              -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+              animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+            }
+            .spinner .bounce1 {
+              -webkit-animation-delay: -0.32s;
+              animation-delay: -0.32s;
+            }
+            .spinner .bounce2 {
+              -webkit-animation-delay: -0.16s;
+              animation-delay: -0.16s;
+            }
+            @-webkit-keyframes sk-bouncedelay {
+              0%, 80%, 100% {
+                -webkit-transform: scale(0);
+              }
+              40% {
+                -webkit-transform: scale(1);
+              }
+            }
+            @keyframes sk-bouncedelay {
+              0%, 80%, 100% {
+                -webkit-transform: scale(0);
+                transform: scale(0);
+              }
+              40% {
+                -webkit-transform: scale(1);
+                transform: scale(1);
+              }
+            }
+          &lt;/style&gt; 
+
+
+          &lt;div ng-show="active" class="spinner"&gt; 
+            &lt;div class="bounce1"&gt; &lt;/div&gt; 
+            &lt;div class="bounce2"&gt; &lt;/div&gt; 
+            &lt;div class="bounce3"&gt; &lt;/div&gt; 
+          &lt;/div>
+          &lt;span ng-hide="active" ng-bind="'SAVE'">&lt;/span&gt; 
+          &lt;input type="submit" style="display:none"/&gt; 
+        </code></pre>
+
+    </div>
+  </div>
         </section>
 
         <aside id="sidebar">
@@ -103,12 +238,13 @@ Create a template with both states and wrap them into tags with "ng-hide" and "n
       </div>
     </div>
 
+  <script>
+    var myapp = angular.module('example_app', ['btnLoader'])
+    myapp.controller('example_Ctrl',['$scope', function($scope){}]);
+  </script>
   
   </body>
 </html>
-
-<!--
-
 <!DOCTYPE html>
 <html>
   <head>
@@ -120,16 +256,9 @@ Create a template with both states and wrap them into tags with "ng-hide" and "n
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
 
-    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"></script>
-    <script>angular.module("btnLoader",[]).directive("btnLoader",["$timeout",function(n){return{restrict:"A",scope:{btnCondition:"=btnCondition",btnTexts:"=btnTexts",btnIcons:"=btnIcons",btnInclude:"=btnInclude",btnColor:"=btnColor"},template:function(n,t){return t.btnInclude?'<span ng-include="btnInclude"></span>':'<style> \n    .btn-load-span{\n        display:inline-block; vertical-align: middle}\n    .btn-load-icon{\n        display:inline-block; vertical-align: initial; margin: 0 3px 0 0}\n    .btn-loading-span{\n        display:inline-block; vertical-align:middle; position:relative;}\n    .btn-loading-icon {\n      height: 15px; width: 15px; position: relative; display:inline-block; vertical-align:middle;\n      -webkit-animation: rotation 1s infinite linear; -moz-animation: rotation 1s infinite linear;\n      -o-animation: rotation 1s infinite linear; animation: rotation 1s infinite linear;\n      border: 2px solid; border-radius: 100%; margin: 0 0 0 5px;}\n    .btn-loading-icon:before {\n      content: ""; display: block; position: absolute; left: 0px; top: -2px; height: 100%; width: 100%;\n      border-top: 2px solid; border-left: 2px solid transparent;\n      border-bottom: 2px solid transparent; border-right: 2px solid transparent; border-radius: 100%; } \n    @-webkit-keyframes rotation {\n      from { -webkit-transform: rotate(0deg);   }\n      to   { -webkit-transform: rotate(359deg); } }\n    @-moz-keyframes rotation {\n      from { -moz-transform: rotate(0deg);   }\n      to   { -moz-transform: rotate(359deg); } }\n    @-o-keyframes rotation {\n      from { -o-transform: rotate(0deg);   }\n      to   { -o-transform: rotate(359deg); } }\n    @keyframes rotation {\n      from { transform: rotate(0deg);   }\n      to   { transform: rotate(359deg); } }\n</style>\n\n<span class="btn-load-span" ng-hide="active">\n    <i ng-if="btnIcons.load" class="btn-load-icon {{btnIcons.load}}"></i>\n    {{ btnTexts.load || "Save" }}\n</span>\n<span class="btn-loading-span" ng-show="active">\n    {{ btnTexts.loading || "Saving" }}\n    <i class="{{btnIcons.loading || \'btn-loading-icon\' }}" style="border-color:rgba({{btnColor || \'0,0,0\'}} , .3)"></i>\n</span>\n<input type="submit" style="display:none">'},link:function(t,i,o){return t.btnCondition=!1,i.bind("click",function(){var e;return o.btnKeepsize&&(e=i[0],i.css({width:e.offsetWidth+"px",height:e.offsetHeight+"px"})),n(function(){return t.btnCondition=!0},1)}),t.$watch("btnCondition",function(n,e){return!n&&o.btnKeepsize&&i.css({background:"",width:"",height:""}),t.active=n?!0:!1})}}}]);</script> 
-
-      <script>
-        var myapp = angular.module('example_app', ['btnLoader'])
-        myapp.controller('example_Ctrl',['$scope', function($scope){}]);
-      </script>
-
-
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
 
     <title>Button-loader by rafasoyyo</title>
   </head>
