--- a/index.html
+++ b/index.html
@@ -154,69 +154,7 @@ Create a template with both states and wrap them into tags with "ng-hide" and "n
       <div style="margin:15px"></div>
 
       <span>Custom template: </span>
-      <button class="btn btn-primary" btn-loader btn-condition="cond2" btn-include="'custom_template.html'">
-        
-      <button class="btn btn-primary ng-isolate-scope" btn-loader="" btn-condition="cond2" btn-include="'custom_template.html'">
-        <!-- ngInclude: btnInclude -->
-        <span ng-include="btnInclude" class="ng-scope">                   
-
-          <style class="ng-scope">
-            .spinner {
-              width: 100%;
-              text-align: center;
-            }
-            .spinner.gray > div {
-              background-color: #808080;
-            }
-            .spinner > div {
-              width: 12px;
-              height: 12px;
-              background-color: white;
-              border-radius: 100%;
-              display: inline-block;
-              -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
-              animation: sk-bouncedelay 1.4s infinite ease-in-out both;
-            }
-            .spinner .bounce1 {
-              -webkit-animation-delay: -0.32s;
-              animation-delay: -0.32s;
-            }
-            .spinner .bounce2 {
-              -webkit-animation-delay: -0.16s;
-              animation-delay: -0.16s;
-            }
-            @-webkit-keyframes sk-bouncedelay {
-              0%, 80%, 100% {
-                -webkit-transform: scale(0);
-              }
-              40% {
-                -webkit-transform: scale(1);
-              }
-            }
-            @keyframes sk-bouncedelay {
-              0%, 80%, 100% {
-                -webkit-transform: scale(0);
-                transform: scale(0);
-              }
-              40% {
-                -webkit-transform: scale(1);
-                transform: scale(1);
-              }
-            }
-          </style>
-
-
-          <div ng-show="active" class="spinner ng-scope ng-hide">
-            <div class="bounce1"></div>
-            <div class="bounce2"></div>
-            <div class="bounce3"></div>
-          </div>
-          <span ng-hide="active" ng-bind="'SAVE'" class="ng-binding ng-scope">SAVE</span>
-          <input type="submit" style="display:none" class="ng-scope">
-        </span>
-      </button>
-
-      </button>
+      <button class="btn btn-primary" btn-loader btn-condition="cond2" btn-include="'custom_template.html'"></button>
       <button class="btn btn-default" ng-click="cond2 = false">Stop spinner</button>
       <div style="margin:5px"></div>
       <pre><code>code:
