--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@ ng-disabled="custom_condition"      // Add disable state
 btn-include="'noTemplate.html'"     // Add custom template
 btn-texts="{load:'Load', loading: 'loading...'}"                    // Fast customization for texts
 btn-icons="{load:'fa fa-save', loading: 'fa fa-spinner fa-pulse'}"  // Fast customization for icons 
+btn-color="'255,255,255'"           // Customize default spinner color ( '' are mandatory )
 </code></pre>
 
 <h3>
