--- a/index.html
+++ b/index.html
@@ -55,6 +55,13 @@
         background-color: #e6e6e6;
         border-color: #adadad;
       }
+      button[disabled]{
+        cursor: not-allowed;
+        filter: alpha(opacity=65);
+        -webkit-box-shadow: none;
+        box-shadow: none;
+        opacity: .65;
+      }
     </style>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"></script>
     <script>angular.module("btnLoader",[]).directive("btnLoader",["$timeout",function(n){return{restrict:"A",scope:{btnCondition:"=btnCondition",btnTexts:"=btnTexts",btnIcons:"=btnIcons",btnInclude:"=btnInclude",btnColor:"=btnColor"},template:function(n,t){return t.btnInclude?'<span ng-include="btnInclude"></span>':'<style> \n    .btn-load-span{\n        display:inline-block; vertical-align: middle}\n    .btn-load-icon{\n        display:inline-block; vertical-align: initial; margin: 0 3px 0 0}\n    .btn-loading-span{\n        display:inline-block; vertical-align:middle; position:relative;}\n    .btn-loading-icon {\n      height: 15px; width: 15px; position: relative; display:inline-block; vertical-align:middle;\n      -webkit-animation: rotation 1s infinite linear; -moz-animation: rotation 1s infinite linear;\n      -o-animation: rotation 1s infinite linear; animation: rotation 1s infinite linear;\n      border: 2px solid; border-radius: 100%; margin: 0 0 0 5px;}\n    .btn-loading-icon:before {\n      content: ""; display: block; position: absolute; left: -2px; top: -2px; height: 100%; width: 100%;\n      border-top: 2px solid; border-left: 2px solid transparent;\n      border-bottom: 2px solid transparent; border-right: 2px solid transparent; border-radius: 100%; } \n    @-webkit-keyframes rotation {\n      from { -webkit-transform: rotate(0deg);   }\n      to   { -webkit-transform: rotate(359deg); } }\n    @-moz-keyframes rotation {\n      from { -moz-transform: rotate(0deg);   }\n      to   { -moz-transform: rotate(359deg); } }\n    @-o-keyframes rotation {\n      from { -o-transform: rotate(0deg);   }\n      to   { -o-transform: rotate(359deg); } }\n    @keyframes rotation {\n      from { transform: rotate(0deg);   }\n      to   { transform: rotate(359deg); } }\n</style>\n\n<span class="btn-load-span" ng-hide="active">\n    <i ng-if="btnIcons.load" class="btn-load-icon {{btnIcons.load}}"></i>\n    {{ btnTexts.load || "Save" }}\n</span>\n<span class="btn-loading-span" ng-show="active">\n    {{ btnTexts.loading || "Saving" }}\n    <i class="{{btnIcons.loading || \'btn-loading-icon\' }}" style="border-color:rgba({{btnColor || \'0,0,0\'}} , .3)"></i>\n</span>\n<input type="submit" style="display:none">'},link:function(t,i,o){return t.btnCondition=!1,i.bind("click",function(){var e;return o.btnKeepsize&&(e=i[0],i.css({width:e.offsetWidth+"px",height:e.offsetHeight+"px"})),n(function(){return t.btnCondition=!0},1)}),t.$watch("btnCondition",function(n,e){return!n&&o.btnKeepsize&&i.css({background:"",width:"",height:""}),t.active=n?!0:!1})}}}]);</script>
@@ -141,17 +148,17 @@ Create a template with both states and wrap them into tags with "ng-hide='active
       <div style="margin:15px"></div>
 
       <span>Bootstrap style button: </span>
-      <button class="btn btn-primary" btn-loader btn-condition="cond1" btn-texts="{load:'Send', loading: 'Sending'}" btn-color="'255,255,255'"></button>
+      <button class="btn btn-primary" btn-loader btn-condition="cond1" btn-texts="{load:'Send', loading: 'Sending'}" btn-color="'255,255,255'" ng-disabled="cond1"></button>
       <button class="btn btn-default" ng-click="cond1 = false">Stop spinner</button>
       <div style="margin:5px"></div>
       <pre><code>code:
-        &lt;button class="btn btn-primary" btn-loader btn-condition="cond1" btn-texts="{load:'Send', loading: 'Sending'}" btn-color="'255,255,255'"&gt&lt;/button&gt; 
+        &lt;button class="btn btn-primary" btn-loader btn-condition="cond1" btn-texts="{load:'Send', loading: 'Sending'}" btn-color="'255,255,255'" ng-disabled="cond1"&gt&lt;/button&gt; 
         &lt;button class="btn btn-primary" ng-click="cond1 = false"&gtStop spinner&lt;/button&gt; </code></pre>
 
       <div style="margin:15px"></div>
 
       <span>FontAwesome style button: </span>
-      <button class="btn btn-primary" btn-loader btn-condition="cond2" btn-texts="{load:'Send', loading: 'Sending'}" btn-icons="{load:'fa fa-save', loading:'fa fa-spinner fa-pulse'}"></button>
+      <button class="btn btn-primary" btn-loader btn-condition="cond2" btn-icons="{load:'fa fa-save', loading:'fa fa-spinner fa-pulse'}"></button>
       <button class="btn btn-default" ng-click="cond2 = false">Stop spinner</button>
       <div style="margin:5px"></div>
       <pre><code>code:
@@ -161,11 +168,11 @@ Create a template with both states and wrap them into tags with "ng-hide='active
       <div style="margin:15px"></div>
 
       <span>Custom template: </span>
-      <button class="btn btn-primary" btn-loader btn-condition="cond3" btn-include="'custom_template.html'"></button>
+      <button class="btn btn-primary" btn-loader btn-condition="cond3" btn-keepsize="true" btn-include="'custom_template.html'"></button>
       <button class="btn btn-default" ng-click="cond3 = false">Stop spinner</button>
       <div style="margin:5px"></div>
       <pre><code>code:
-        &lt;button class="btn btn-primary" btn-loader btn-condition="cond2" btn-include="'example/custom_template.html'"&gt&lt;/button&gt; 
+        &lt;button class="btn btn-primary" btn-loader btn-condition="cond2" btn-keepsize="true" btn-include="'example/custom_template.html'"&gt&lt;/button&gt; 
         &lt;button class="btn btn-primary" ng-click="cond2 = false"&gtStop spinner&lt;/button&gt; 
 
 Template:
