--- a/custom_template.html
+++ b/custom_template.html
@@ -51,5 +51,5 @@
 	<div class="bounce2"></div>
 	<div class="bounce3"></div>
 </div>
-<span ng-hide="active">Keep same size</span>
+<span ng-hide="active">Keep same size?</span>
 <input type="submit" style="display:none" />
