--- a/index.html
+++ b/index.html
@@ -115,6 +115,10 @@ btn-icons="{load:'fa fa-save', loading: 'fa fa-spinner fa-pulse'}"  // Fast cust
 btn-color="'255,255,255'"           // Customize default spinner color ( '' are mandatory )
 </code></pre>
 
+<p>If condition doesn't work before of the scopes issues you can forze it with an event passing the parameter "bool" (dafault false)</p>
+
+<pre><code>$scope.$broadcast('btn-loader', bool) </code></pre>
+
 <h3>
 <a id="custom-templates" class="anchor" href="#custom-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Custom Templates</h3>
 
