--- a/index.html
+++ b/index.html
@@ -115,6 +115,8 @@ btn-icons="{load:'fa fa-save', loading: 'fa fa-spinner fa-pulse'}"  // Fast cust
 btn-color="'255,255,255'"           // Customize default spinner color ( '' are mandatory )
 </code></pre>
 
+<h3>
+<a id="Events" class="anchor" href="#Events" aria-hidden="true"><span class="octicon octicon-link"></span></a>Events</h3>
 <p>If condition doesn't work before of the scopes issues you can forze it with an event passing the parameter "bool" (dafault false)</p>
 
 <pre><code>$scope.$broadcast('btn-loader', bool) </code></pre>
